# Live-Strategy-Backtester-II

./: .gitignore  CMakeLists.txt  README.md  config.json  index.html  main.cpp
.devcontainer/: devcontainer.json
include/analytics/: Analytics.h  MLModelManager.h  MarketRegimeDetector.h  MonteCarloSimulator.h  Optimizer.h  WalkForwardAnalyzer.h
include/api/: APIServer.h
include/config/: Config.h  ConfigParser.h
include/core/: Application.h  Component.h  DataTypes.h  EventBus.h  Log.h  PortfolioManager.h  Utils.h
include/data/: DataHandler.h  HistoricCSVDataHandler.h  NewsDataHandler.h  WebSocketDataHandler.h
include/events/: Event.h
include/execution/: ExecutionHandler.h
include/risk/: RiskManager.h
include/strategy/: BuyEveryTickStrategy.h  OrderBookImbalanceStrategy.h  Strategy.h  StrategyManager.h
include/utils/: PerformanceMonitor.h  Timer.h
src/: CMakeLists.txt
src/analytics/: Analytics.cpp  MLModelManager.cpp  MarketRegimeDetector.cpp  MonteCarloSimulator.cpp  Optimizer.cpp  WalkForwardAnalyzer.cpp
src/api/: APIServer.cpp
src/config/: ConfigParser.cpp
src/core/: Application.cpp  EventBus.cpp  Log.cpp  PortfolioManager.cpp
src/data/: HistoricCSVDataHandler.cpp  NewsDataHandler.cpp  WebSocketDataHandler.cpp
src/execution/: ExecutionHandler.cpp
src/risk/: RiskManager.cpp
src/strategy/: BuyEveryTickStrategy.cpp  OrderBookImbalanceStrategy.cpp  Strategy.cpp  StrategyManager.cpp
src/utils/: TimerGuard.cpp
tests/: CMakeLists.txt  execution_handler_test.cpp  integration_test.cpp  main_test.cpp  performance_test.cpp  portfolio_manager_test.cpp  strategy_manager_test.cpp
tests/data/: order_book_data.csv  test_market_data.csv
